# SarychDB

./: .gitignore  API_v2.md  API_v3.1.md  API_v3.md  Cargo.toml  README.md  SEARCH_OPTIMIZATION.md  TESTING.md
src/: main.rs
src/modules/: auth.rs  database.rs  mod.rs  search.rs  server.rs
