[package]
name = "SarychDB"
version = "2.0.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
url = "2.4"
bytes = "1.0"
urlencoding = "2.1"
once_cell = "1.19"
